updates for info island window. Change drag root element to the wrapping overlay pane. Cleaner way to allow dragging without interfering with mouse events after window was moved. Also makes the window resizing work without the weird transform issue it was having

--- a/frontend/src/app/shared/modules/info-island/containers/info-island.component.scss
+++ b/frontend/src/app/shared/modules/info-island/containers/info-island.component.scss
@@ -1,4 +1,5 @@
 @mixin info-island-component-base() {
+
     .info-island-container {
         
         .mat-card {
@@ -49,7 +50,7 @@
                 margin: 0;
                 padding: 0;
                 flex: 1;
-                overflow: auto;
+                overflow: hidden;
             }
         }
 
